--- a/.env.encrypted
+++ b/.env.encrypted
@@ -1,8 +1,8 @@
 {
-    "app_name": "Test App",
+    "app_name": "Adder App",
     "app_version": "1.0.0",
     "debug_mode": true,
-    "last_config_update": "2025-03-13T22:33:26.833864",
+    "last_config_update": "2025-04-03T20:21:19.488618",
     "default_delay": 20,
     "max_delay": 300,
     "max_retry_count": 10,
@@ -14,19 +14,27 @@
     "request_log_file": "request_log.json",
     "ai_data_file": "ai_training_data.json",
     "accounts_file": "telegram_accounts.json",
-    "use_proxy": false,
+    "use_proxy": true,
     "default_proxy_type": "socks5",
     "proxy_settings": {
         "default": {
             "proxy_type": "socks5",
-            "addr": "",
-            "port": 1080,
+            "addr": "wrfwrfwefwef",
+            "port": 8080,
+            "username": "",
+            "password": "",
+            "rdns": true
+        },
+        "rtrtrt": {
+            "proxy_type": "socks5",
+            "addr": "wcewecweded",
+            "port": 8080,
             "username": "",
             "password": "",
             "rdns": true
         }
     },
-    "proxy_rotation_enabled": false,
+    "proxy_rotation_enabled": true,
     "proxy_rotation_interval": 3600,
     "session_prefix": "tg_session",
     "encryption_enabled": true,
